syntax = "proto3";

package user;
option go_package = "/dev_microservice1/api/user/";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated string roles = 5;
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  User user = 1;
}

service UserService {
  rpc CreateUser(User) returns (UserResponse) {}
  rpc UpdateUser(User) returns (UserResponse) {}
  rpc DeleteUser(UserRequest) returns (UserResponse) {}
}
